# ros_to_proto

./: Dockerfile  README.md
ros_to_proto/data_acquisition_interfaces/: CMakeLists.txt  package.xml
ros_to_proto/data_acquisition_interfaces/msg/: DataAcquisitionData.msg
ros_to_proto/key_value_interfaces/: CMakeLists.txt  package.xml
ros_to_proto/rosidl_converter_protobuf_py/: CMakeLists.txt  package.xml  rosidl_converter_protobuf_py-extras.cmake.in
ros_to_proto/rosidl_converter_protobuf_py/cmake/: register_protobuf_py.cmake  rosidl_converter_protobuf_py_generate_interfaces.cmake
ros_to_proto/rosidl_converter_protobuf_py/resource/: type_support.py.em
ros_to_proto/rosidl_converter_protobuf_py/rosidl_converter_protobuf_py/: __init__.py  auto_register.py  conversions.py  generate.py
ros_to_proto/rosidl_converter_protobuf_py_tests/: package.xml  setup.cfg  setup.py
ros_to_proto/rosidl_converter_protobuf_py_tests/test/: test_data_acquisiton_conversion.py
ros_to_proto/rosidl_typesupport_protobuf_cpp_tests/: CMakeLists.txt  package.xml
ros_to_proto/rosidl_typesupport_protobuf_cpp_tests/test/: test_data_acquisition_conversion.cpp
