<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosidl_converter_protobuf_py</name>
  <version>0.1.0</version>
  <description>Generate Python converters between ROS 2 and Protocol Buffers messages</description>
  <maintainer email="maintainer@example.com">ROS Maintainer</maintainer>
  <license>Apache License 2.0</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>rosidl_cmake</buildtool_depend>

  <!-- Build tool exports -->
  <buildtool_export_depend>ament_cmake</buildtool_export_depend>
  <buildtool_export_depend>rosidl_cmake</buildtool_export_depend>
  <buildtool_export_depend>rosidl_generator_py</buildtool_export_depend>

  <!-- Build exports -->
  <build_export_depend>rmw</build_export_depend>

  <!-- Execution dependencies -->
  <exec_depend>protobuf</exec_depend>
  <exec_depend>rosidl_cmake</exec_depend>
  <exec_depend>rosidl_generator_py</exec_depend>
  <exec_depend>rosidl_parser</exec_depend>
  <exec_depend>rosidl_adapter_proto</exec_depend>
  <exec_depend>rosidl_typesupport_protobuf</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>rmw</test_depend>
  <test_depend>rosidl_cmake</test_depend>
  <test_depend>rosidl_parser</test_depend>

  <!-- Register as a code generator package -->
  <member_of_group>rosidl_generator_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>