<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosidl_converter_protobuf_py_tests</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="p.dhulipala@reply.de">pranav</maintainer>
  <license>Apache License 2.0</license> 
  <depend>rclpy</depend>
  <depend>rosidl_parser</depend>
  <depend>rosidl_adapter</depend>
  <depend>data_acquisition_interfaces</depend>
  <depend>key_value_interfaces</depend>
  <depend>rosidl_converter_protobuf_py</depend>
  <exec_depend>python3-protobuf</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>