<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosidl_typesupport_protobuf_cpp_tests</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="p.dhulipala@reply.de">root</maintainer>
  <license>Apache License 2.0</license> 

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>data_acquisition_interfaces</depend>
  <depend>key_value_interfaces</depend>
  <depend>rosidl_runtime_cpp</depend>
  
  <!-- Test dependencies -->
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
